# repairloop-buildweek

./: BRANDING.md  CITATION.cff  LAUNCH_DRAFTS.md  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP_ISSUE.md  SOCIAL_EXPOSURE_POSTS.md  XIAOHONGSHU_POST.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  repair_rule_request.yml
benchmarks/file-not-found/missing-config/: README.md  expected.json  expected_error.txt  expected_repair.md
benchmarks/file-not-found/missing-config/before/: main.py
benchmarks/sqlite/missing-users-table/: README.md  expected.json  expected_error.txt  expected_repair.md
benchmarks/sqlite/missing-users-table/before/: main.py
benchmarks/sqlite/missing-users-table/before/data/: .gitkeep
benchmarks/syntax/missing-colon/: README.md  command.txt  expected.json  expected_error.txt  expected_repair.md
benchmarks/syntax/missing-colon/before/: main.py
docs/: JUDGE_NOTES_GPT56.md  benchmark-plan.md
lobster_ai_system/: cli.py  metadata.py
lobster_ai_system/core/: fix_engine.py
repair_loop/: __init__.py  benchmark.py  cli.py
scripts/: make_buildweek_judge_demo.ps1  make_demo_video.ps1
tests/: test_benchmark.py  test_cli.py  test_fix_engine.py
