[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "repairloop"
version = "0.2.0"
description = "Local-first automatic code repair tool for Python runtime errors"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "RepairLoop Contributors" }]
keywords = ["code-repair", "debugging", "automation", "python", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
repair-loop = "repair_loop.cli:main"

[tool.setuptools.packages.find]
include = ["repair_loop*"]
exclude = ["demo*", "tests*"]
